--- a/themes/growth-sketch/assets/scss/abstracts/_utilities.scss
+++ b/themes/growth-sketch/assets/scss/abstracts/_utilities.scss
@@ -30,6 +30,11 @@
 .text-accent{
     color: $accent-clr;
 }
+
+.tagline{
+    font-family: $font-daniel;
+    font-size: 1.5rem;
+}
 .neumorphism {
     background: linear-gradient(145deg, $card-shadow-light, $white);
     border-radius: 10px;
