--- a/themes/growth-sketch/assets/scss/abstracts/_variables.scss
+++ b/themes/growth-sketch/assets/scss/abstracts/_variables.scss
@@ -60,4 +60,4 @@ $sizes: (); // An empty map to store the size values
   // Store the sizes in the map
   $sizes: map-merge($sizes, ($size: $size-value));
 }
-$navbar-height: 12vh
+$navbar-height: 10vh;
