--- a/themes/growth-sketch/assets/scss/base/_reset.scss
+++ b/themes/growth-sketch/assets/scss/base/_reset.scss
@@ -3,6 +3,8 @@
 html {
     scroll-behavior: smooth;
     // font-size: 17px;
+    letter-spacing: 0.1em;
+    line-height: 1.5;
     @media(max-width:425px) {
         font-size: 14px;
     }
