--- a/themes/growth-sketch/assets/scss/layout/_header.scss
+++ b/themes/growth-sketch/assets/scss/layout/_header.scss
@@ -2,27 +2,32 @@
 
 .navbar {
     height: $navbar-height;
-    background-color: $primary-clr--light!important;
-    // box-shadow secondary color
+    background-color: $primary-clr--light !important;
     box-shadow: 0px 3px 10px 0px rgb(26, 140, 255);
+
+    @media(min-width:768px) {
+        height: calc(#{$navbar-height} + 2vh);
+    }
+
     .navbar-brand {
         img {
             width: clamp(50px, 60px, 12vw);
         }
 
         .brand-name {
-            // font-size: min(1rem, 1.1rem);
-            .brand{
-                // font-size: 1.5rem;
+            .brand {
+                // font-size: 2rem;
                 font-weight: normal;
-                @media(max-width:768px){
-                    font-size: 1.5rem;
+
+                @media(max-width:768px) {
+                    // font-size: 1.5rem;
                 }
             }
-            .tagline{
-                font-weight: bold;
-                font-family: $font-daniel;
-            }
+
+            // .tagline{
+            //     font-weight: bold;
+            //     font-family: $font-daniel;
+            // }
         }
     }
 
@@ -31,36 +36,37 @@
     }
 
     .navbar-collapse {
-    background-color: $primary-clr--light!important;
+        background-color: $primary-clr--light !important;
+        box-shadow: 0px 3px 10px 0px rgb(26, 140, 255);
 
         @media(max-width:768px) {
             position: absolute;
-            top: $navbar-height;
-            left: 0;
+            top: calc(#{$navbar-height} - 2vh);
+            // left: 0;
             right: 0;
+            height: 100vh;
         }
     }
 
-    // .navbar-toggler-icon {
-    //     background-image: url('hamburger-icon.svg');
-    // }
     .nav-item {
         font-size: 1.2rem;
         letter-spacing: 1px;
         padding-block: 1rem;
-        @media(max-width:991px){
+
+        @media(max-width:991px) {
             font-size: 1rem;
         }
-        
+
         // font-weight: 700;
-        .dropdown-menu{
+        .dropdown-menu {
             min-width: fit-content;
             background-color: lighten($primary-clr, 70%);
-            li{
+
+            li {
                 padding-block: 1rem;
             }
         }
-       
+
         .nav-link,
         .dropdown-item {
             padding-block: 0;
@@ -73,7 +79,9 @@
         }
     }
 }
-.dropdown-item.active, .dropdown-item:active{
-    background-color: transparent!important;
-    color: $primary-clr!important;
+
+.dropdown-item.active,
+.dropdown-item:active {
+    background-color: transparent !important;
+    color: $primary-clr !important;
 }
