--- a/themes/growth-sketch/assets/scss/pages/_home.scss
+++ b/themes/growth-sketch/assets/scss/pages/_home.scss
@@ -1,25 +1,21 @@
 @import '../abstracts/variables';
+$hero-height: calc(100vh - #{$navbar-height});
 
 // hero
 .hero {
-  // background-color: $white;
-  $hero-height: calc(100vh - #{$navbar-height});
   min-height: $hero-height;
 
   .title {
-    font-size: 3rem;
-    @media(max-width:768px) {
-      font-size: 1.5rem;
-      // font-weight: 400;
+    font-size: 2rem;
+    @media(min-width:768px) {
+      font-size: 3rem;
     }
   }
   .subtitle{
     font-size: 1.2rem;
   }
 
-  h4 {
-    font-family: $font-daniel;
-  }
+  
 
   .carousel-inner {
     /* Set a fixed height */
