--- a/themes/growth-sketch/layouts/_default/home.html
+++ b/themes/growth-sketch/layouts/_default/home.html
@@ -1,24 +1,13 @@
 {{ define "main" }}
 <!-- Section 1- Hero -->
-<section class="hero gradient-bg pb-3 py-md-5">
+<section class="hero gradient-bg py-0 py-md-5">
   <div class="container text-center text-md-start">
     <div class="row align-items-center justify-content-between">
-      <div class="col-md-6 mt-2 mt-md-0 px-3">
-        <h2 class="title mb-4">Is your business or organization struggling to achieve its goals and energize your
-          team?</h2>
-        <h3 class="subtitle fst-italic my-3 my-md-4">At ESPeople, we energize and synergize your teams to achieve
-          tactical and strategic goals through
-          collaborative efforts.</h3>
-        <p class="mb-0">We integrate your teams full collective potentials and optimize your management &
-          leadership capabilities towards mission accomplishments</p>
-        <!-- <p class="mt-3">At ESPeople, we energize and synergize people. We integrate your teams' full collective
-          potentials and optimize your management & leadership towards mission accomplishments</p> -->
-        <h4 class="mt-3 mt-md-4">"Thus we are ESPeople Trainingsmiths"</h4>
-        <div class="btn-row d-none">
-          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#ourApproach">Know
-            us</button>
-          <!-- <button class="btn btn-secondary--outline ms-md-3">Main features</button> -->
-        </div>
+      <div class="col-md-6 py-4 py-md-0 px-3">
+        <h2 class="title mb-0">Is your business or organization struggling to achieve its goals and energize your team?</h2>
+        <h3 class="subtitle fst-italic my-3 my-md-4">At ESPeople, we energize and synergize your teams to achieve tactical and strategic goals through collaborative efforts.</h3>
+        <p class="desc mb-0">We integrate your teams full collective potentials and optimize your management & leadership capabilities towards mission accomplishments</p>
+        <h4 class="tagline mt-4">"Thus we are ESPeople Trainingsmiths"</h4>
       </div>
       <div class="col-md-6 order-first order-md-2 px-0 px-md-2">
         <div id="heroCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="1500">
