--- a/themes/growth-sketch/layouts/partials/menu.html
+++ b/themes/growth-sketch/layouts/partials/menu.html
@@ -13,9 +13,9 @@ Renders a menu for the given menu ID.
 <nav class="navbar navbar-expand-md navbar-light fixed-top p-0">
   <div class="container">
     <a class="navbar-brand d-flex align-items-center gap-2 gap-md-3 p-0 text-decoration-none" href="/">
-      <img src="/images/logo.png" alt="ESPeople logo" title="ESPeople logo">
+      <img class="d-block" src="/images/logo.png" alt="ESPeople logo" title="ESPeople logo">
       <div class="brand-name">
-        <h2 class="brand mb-0">ESPeople</h2>
+        <h3 class="brand mb-0">ESPeople</h3>
         <p class="tagline mb-0">TrainingSmiths</p>
       </div>
     </a>
@@ -25,7 +25,7 @@ Renders a menu for the given menu ID.
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse pe-4" id="navbarNav">
+    <div class="collapse navbar-collapse px-4" id="navbarNav">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         {{- with index site.Menus $menuID }}
         {{- partial "inline/menu/walk.html" (dict "page" $page "menuEntries" .) }}
