2nd sec icon width and 3rd sec design changes

--- a/themes/growth-sketch/assets/scss/abstracts/_utilities.scss
+++ b/themes/growth-sketch/assets/scss/abstracts/_utilities.scss
@@ -53,6 +53,9 @@
 .bg-primary--light {
     background-color: $primary-clr--light;
 }
+.bg-accent{
+    background-color: $accent-clr;
+}
 
 .text-primary {
     color: $primary-clr;
