--- a/public/scss/main.css
+++ b/public/scss/main.css
@@ -37,6 +37,9 @@
 .bg-primary--light {
   background-color: #bdecfa; }
 
+.bg-accent {
+  background-color: #ffc105; }
+
 .text-primary {
   color: #004080; }
 
@@ -98,7 +101,6 @@ p {
   line-height: 1.6; }
 
 [data-aos] {
-  transform-origin: center;
   max-width: 100%; }
 
 @media (max-width: 768px) {
@@ -112,7 +114,7 @@ a {
   text-decoration: none;
   color: #09304e; }
   a:hover {
-    text-decoration: underline; }
+    text-decoration: none; }
 
 img {
   max-width: 100%;
@@ -196,14 +198,14 @@ h6, .h6 {
   .navbar .navbar-toggler {
     border: none; }
   .navbar .navbar-collapse {
-    background-color: #bdecfa !important;
-    box-shadow: 0px 3px 10px 0px #1a8cff; }
+    background-color: #bdecfa !important; }
     @media (max-width: 768px) {
       .navbar .navbar-collapse {
+        box-shadow: 0px 3px 10px 0px #1a8cff;
         position: absolute;
-        top: calc(10vh - 2vh);
-        right: 0;
-        height: 100vh; } }
+        top: calc(10vh - 1vh);
+        left: 0;
+        right: 0; } }
   .navbar .nav-item {
     font-size: 1.2rem;
     letter-spacing: 1px;
@@ -218,7 +220,7 @@ h6, .h6 {
         padding-block: 1rem; }
     .navbar .nav-item .nav-link,
     .navbar .nav-item .dropdown-item {
-      padding-block: 0;
+      padding: 0;
       color: #004080; }
     @media (max-width: 991px) {
       .navbar .nav-item {
@@ -354,8 +356,10 @@ h6, .h6 {
     font-size: 2rem; }
     @media (min-width: 768px) {
       .hero .title {
-        font-size: 3rem; } }
+        font-size: 2.5rem; } }
   .hero .subtitle {
+    font-size: 1.2rem; }
+  .hero .tagline {
     font-size: 1.2rem; }
   .hero .carousel-inner {
     /* Set a fixed height */
@@ -370,18 +374,18 @@ h6, .h6 {
       object-fit: cover;
       /* Preserve aspect ratio and cover the area */ }
       @media (max-width: 768px) {
-        .hero .carousel-inner .carousel-image.neumorphism {
+        .hero .carousel-inner .carousel-image {
           height: calc(calc(100vh - 10vh) /2.6);
           border-radius: 0; } }
   .hero .carousel-indicators {
     bottom: -20px;
     /* Adjust position of the dots */ }
 
-.beneficiaries {
+.clientele {
   color: #0a1b24; }
-  .beneficiaries .sub-title {
+  .clientele .sub-title {
     font-weight: bold; }
-  .beneficiaries .beneficiary-card {
+  .clientele .beneficiary-card {
     background: #004080;
     background: linear-gradient(135deg, #004080 60%, #0a1b24 100%);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -397,57 +401,51 @@ h6, .h6 {
     justify-content: center;
     align-items: center;
     margin-inline: auto; }
-    .beneficiaries .beneficiary-card:hover {
+    .clientele .beneficiary-card:hover {
       transform: translateY(-10px);
       box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3); }
     @media (max-width: 425px) {
-      .beneficiaries .beneficiary-card {
-        width: 40vw;
-        height: 40vw; } }
-    .beneficiaries .beneficiary-card i {
+      .clientele .beneficiary-card {
+        width: 37vw;
+        height: 37vw; } }
+    .clientele .beneficiary-card i {
       color: #ffc105;
       font-size: clamp(3rem, 4vw, 48px); }
-    .beneficiaries .beneficiary-card p {
+    .clientele .beneficiary-card p {
       color: #f8fbfc;
       text-align: center;
       margin-top: 5px; }
 
-.industry-section {
+.clientele-brief {
   position: relative; }
-  .industry-section .industry-title {
+  .clientele-brief .title {
     font-weight: bold;
     display: flex;
     align-items: center; }
-  .industry-section .industry-icon {
-    width: 80%;
+    .clientele-brief .title i {
+      color: #ffc105;
+      margin-right: 1rem;
+      font-size: 1.5rem; }
+  .clientele-brief .image {
     margin-inline: auto;
     display: block;
     border-radius: 10px; }
     @media (min-width: 991px) {
-      .industry-section .industry-icon {
-        width: 70%; } }
-  .industry-section i {
+      .clientele-brief .image {
+        width: 80%; } }
+  .clientele-brief hr.bg-accent {
+    height: 4px;
+    opacity: 1;
+    width: 80%;
+    margin-inline: auto;
+    border-radius: 50%; }
+  .clientele-brief .btn-row i {
+    background-color: transparent;
     color: #ffc105;
-    margin-right: 1rem;
-    background-color: #004080;
-    padding: 0.5em;
-    border-radius: 50%;
-    font-size: 1.5rem;
-    width: 2em;
-    height: 2em;
-    display: flex;
-    justify-content: center;
-    align-items: center; }
-
-.btn-row i {
-  background-color: transparent;
-  color: #004080;
-  font-size: 1.3rem; }
-
-@media (max-width: 768px) {
-  .btn-row .btn {
-    width: 100%; } }
-
+    font-size: 1.3rem; }
+  @media (max-width: 768px) {
+    .clientele-brief .btn {
+      width: 100%; } }
 .evolution-vision-mission {
   position: relative;
   background: linear-gradient(to bottom right, #0a1b24, #004080);
