--- a/themes/growth-sketch/assets/scss/layout/_header.scss
+++ b/themes/growth-sketch/assets/scss/layout/_header.scss
@@ -37,14 +37,14 @@
 
     .navbar-collapse {
         background-color: $primary-clr--light !important;
-        box-shadow: 0px 3px 10px 0px rgb(26, 140, 255);
-
+        
         @media(max-width:768px) {
+            box-shadow: 0px 3px 10px 0px rgb(26, 140, 255);
             position: absolute;
-            top: calc(#{$navbar-height} - 2vh);
-            // left: 0;
+            top: calc(#{$navbar-height} - 1vh);
+            left: 0;
             right: 0;
-            height: 100vh;
+            // height: 100vh;
         }
     }
 
@@ -69,7 +69,7 @@
 
         .nav-link,
         .dropdown-item {
-            padding-block: 0;
+            padding: 0;
             color: $primary-clr;
         }
 
