--- a/themes/growth-sketch/assets/scss/pages/_home.scss
+++ b/themes/growth-sketch/assets/scss/pages/_home.scss
@@ -8,14 +8,16 @@ $hero-height: calc(100vh - #{$navbar-height});
   .title {
     font-size: 2rem;
     @media(min-width:768px) {
-      font-size: 3rem;
+      font-size: 2.5rem;
     }
   }
   .subtitle{
     font-size: 1.2rem;
   }
 
-  
+  .tagline{
+    font-size: 1.2rem;
+  }
 
   .carousel-inner {
     /* Set a fixed height */
@@ -33,13 +35,10 @@ $hero-height: calc(100vh - #{$navbar-height});
       object-fit: cover;
 
       /* Preserve aspect ratio and cover the area */
-      &.neumorphism {
-        @media(max-width:768px) {
+      @media(max-width:768px) {
           height: calc(#{$hero-height} /2.6);
-          // height: calc(#{$hero-height}/2);
           border-radius: 0;
         }
-      }
     }
 
   }
@@ -51,7 +50,7 @@ $hero-height: calc(100vh - #{$navbar-height});
 
 }
 
-.beneficiaries {
+.clientele {
   color: $secondary-clr;
 
   .sub-title {
@@ -80,8 +79,8 @@ $hero-height: calc(100vh - #{$navbar-height});
       box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
     }
     @media(max-width:425px) {
-      width: 40vw;
-      height: 40vw;
+      width:  37vw;
+      height: 37vw;
 
     }
 
@@ -102,11 +101,11 @@ $hero-height: calc(100vh - #{$navbar-height});
 }
 
 
-.industry-section {
+.clientele-brief {
   position: relative;
   // padding: 4rem 0;
 
-  .industry-title {
+  .title {
     // font-size: 2rem;
     font-weight: bold;
     display: flex;
@@ -115,42 +114,49 @@ $hero-height: calc(100vh - #{$navbar-height});
     @media(max-width:768px) {
       // font-size: 1.5rem;
     }
+    i {
+      color: $accent-clr;
+      margin-right: 1rem;
+      // background-color: $primary-clr;
+      // padding: 0.5em;
+      // border-radius: 50%;
+      font-size: 1.5rem;
+      // width: 2em;
+      // height: 2em;
+      // display: flex;
+      // justify-content: center;
+      // align-items: center;
+    }
   }
 
-  .industry-icon {
-    width: 80%;
+  .image {
+    // width: 80%;
     margin-inline: auto;
     display: block;
     border-radius: 10px;
     // margin-bottom: 2rem;
     @media(min-width:991px) {
-      width: 70%;
+      width: 80%;
     }
   }
 
-  i {
-    color: $accent-clr;
-    margin-right: 1rem;
-    background-color: $primary-clr;
-    padding: 0.5em;
+  hr.bg-accent{
+    height: 4px;
+    opacity: 1;
+    width: 80%;
+    margin-inline: auto;
     border-radius: 50%;
-    font-size: 1.5rem;
-    width: 2em;
-    height: 2em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
   }
+  .btn-row {
+    i {
+      background-color: transparent;
+      color: $accent-clr;
+      font-size: 1.3rem;
+      // width: 1.4em;
+      // height: 1.4em;
+    }
 }
 
-.btn-row {
-  i {
-    background-color: transparent;
-    color: $primary-clr;
-    font-size: 1.3rem;
-    // width: 1.4em;
-    // height: 1.4em;
-  }
 
   .btn {
     @media(max-width:768px) {
