--- a/themes/growth-sketch/layouts/_default/home.html
+++ b/themes/growth-sketch/layouts/_default/home.html
@@ -4,64 +4,80 @@
   <div class="container text-center text-md-start">
     <div class="row align-items-center justify-content-between">
       <div class="col-md-6 py-4 py-md-0 px-3">
-        <h2 class="title mb-0">Is your business or organization struggling to achieve its goals and energize your team?</h2>
-        <h3 class="subtitle fst-italic my-3 my-md-4">At ESPeople, we energize and synergize your teams to achieve tactical and strategic goals through collaborative efforts.</h3>
-        <p class="desc mb-0">We integrate your teams full collective potentials and optimize your management & leadership capabilities towards mission accomplishments</p>
-        <h4 class="tagline mt-4">"Thus we are ESPeople Trainingsmiths"</h4>
+        <h2 
+          class="title mb-0" 
+          data-aos="fade-up" 
+          data-aos-delay="0">Is your business or organization struggling to achieve its goals and energize your team?</h2>
+      
+        <h3 
+          class="subtitle fst-italic my-3 my-md-4" 
+          data-aos="fade-right" 
+          data-aos-delay="0">At ESPeople, we energize and synergize your teams to achieve tactical and strategic goals through collaborative efforts.</h3>
+      
+        <p 
+          class="desc mb-0" 
+          data-aos="fade-left" 
+          data-aos-delay="0">We integrate your teams full collective potentials and optimize your management & leadership capabilities towards mission accomplishments</p>
+      
+        <h4 
+          class="tagline mt-4" 
+          data-aos="fade-down-left" 
+          data-aos-delay="100">"Thus we are ESPeople Trainingsmiths"</h4>
       </div>
+      
       <div class="col-md-6 order-first order-md-2 px-0 px-md-2">
         <div id="heroCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="1500">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="/images/hero-img-3-B.jpg" class="d-block w-100 carousel-image neumorphism "
+              <img src="/images/hero-img-3-B.jpg" class="d-block w-100 carousel-image"
                 alt="corporate business Image">
               <div class="carousel-caption d-md-block bg-dark py-1 rounded-2 opacity-50">
                 <h5>ESP Business</h5>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="/images/manufacturing-business.jpg" class="d-block w-100 carousel-image neumorphism "
+              <img src="/images/manufacturing-business.jpg" class="d-block w-100 carousel-image"
                 alt="manufacturing-business Image">
               <div class="carousel-caption d-md-block bg-dark py-1 rounded-2 opacity-50">
                 <h5>ESP Business</h5>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="/images/hero-img-2.jpg" class="d-block w-100 carousel-image neumorphism "
+              <img src="/images/hero-img-2.jpg" class="d-block w-100 carousel-image"
                 alt="non-profit Image">
               <div class="carousel-caption d-md-block bg-dark py-1 rounded-2 opacity-50">
                 <h5>ESP Non-Profit</h5>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="/images/non-profit-bg.jpg" class="d-block w-100 carousel-image neumorphism "
+              <img src="/images/non-profit-bg.jpg" class="d-block w-100 carousel-image"
                 alt="non-profit-2 Image">
               <div class="carousel-caption d-md-block bg-dark py-1 rounded-2 opacity-50">
                 <h5>ESP Non-Profit</h5>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="/images/students.jpeg" class="d-block w-100 carousel-image neumorphism " alt="Education Image">
+              <img src="/images/students.jpeg" class="d-block w-100 carousel-image" alt="Education Image">
               <div class="carousel-caption d-md-block bg-dark py-1 rounded-2 opacity-50">
                 <h5>ESP Education</h5>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="/images/education-img-1.jpeg" class="d-block w-100 carousel-image neumorphism "
+              <img src="/images/education-img-1.jpeg" class="d-block w-100 carousel-image"
                 alt="Education-1 Image">
               <div class="carousel-caption d-md-block bg-dark py-1 rounded-2 opacity-50">
                 <h5>ESP Education</h5>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="/images/government-org.jpeg" class="d-block w-100 carousel-image neumorphism "
+              <img src="/images/government-org.jpeg" class="d-block w-100 carousel-image"
                 alt="government Image">
               <div class="carousel-caption d-md-block bg-dark py-1 rounded-2 opacity-50">
                 <h5>ESP Government</h5>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="/images/Govt-of-India.jpeg" class="d-block w-100 carousel-image neumorphism "
+              <img src="/images/Govt-of-India.jpeg" class="d-block w-100 carousel-image"
                 alt="government-1 Image">
               <div class="carousel-caption d-md-block bg-dark py-1 rounded-2 opacity-50">
                 <h5>ESP Government</h5>
@@ -84,7 +100,7 @@
   </div>
 </section>
 <!-- section 2 - for whom we deliver -->
-<section class="beneficiaries pt-5 px-4 px-md-0">
+<section class="clientele py-custom px-4 px-md-0">
   <div class="container">
     <div class="row align-items-center justify-content-around">
       <!-- Left Section (Text) -->
@@ -126,15 +142,17 @@
   </div>
 </section>
 <!-- sec 3 - clientele brief -->
-<section id="clientele" class="industry-section py-8">
+<section class="clientele-brief py-custom gradient-bg">
+  <h1 class="text-center">Our Learning Solutions</h1>
   <!-- Business Organizations -->
-  <div class="business-section gradient-bg px-4 px-md-0 py-custom">
+  <div class="px-4 px-md-0 py-5">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-6 order-md-1">
-          <h3 class=" industry-title mt-4 mt-md-0"><i class="fa-solid fa-business-time"></i>ESP Business</h3>
+          <h3 class="title mt-4 mt-md-0">
+            <i class="fa-solid fa-business-time"></i>ESP Business</h3>
           <hr>
-          <h4>Learning Solutions</h4>
+          
           <p><em><strong>We deliver transformative, contemporary People Developmental Learning for desired results of
                 your business.</strong></em></p>
           <p>It will enhance executive and managerial productivity with leadership optimization for your organization.
@@ -172,22 +190,23 @@
           </div>
         </div>
         <div class="col-md-6 order-first">
-          <img src="/images/manufacturing-business.png" alt="Business Icon" class="industry-icon">
+          <img src="/images/manufacturing-business.png" alt="Business Icon" class="image">
         </div>
       </div>
     </div>
   </div>
+  <hr class="bg-accent">
   <!-- Non-Profit Organizations -->
-  <div class="nonprofit-section px-4 px-md-0 py-custom">
+  <div class="px-4 px-md-0 py-5">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-6 order-first">
-          <img src="/images/non-profit-1.png" alt="Non-Profit Icon" class="industry-icon">
+          <img src="/images/non-profit-1.png" alt="Non-Profit Icon" class="image">
         </div>
         <div class="col-md-6">
-          <h3 class="industry-title mt-4 mt-md-0"><i class="fa-solid fa-building-ngo"></i>ESP Non-Profit</h3>
+          <h3 class="title mt-4 mt-md-0"><i class="fa-solid fa-building-ngo"></i>ESP Non-Profit</h3>
           <hr>
-          <h4>Learning Solutions</h4>
+          
           <p><em><strong>Our learning solutions are different, unique & transformative for non profits.</strong></em>
           </p>
           <p>
@@ -232,17 +251,18 @@
       </div>
     </div>
   </div>
+  <hr class="bg-accent">
   <!-- Education Sector -->
-  <div class="education-section gradient-bg px-4 px-md-0 py-custom">
+  <div class="px-4 px-md-0 py-5">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-6 order-first">
-          <img src="/images/education-icon.png" alt="Education Icon" class="industry-icon">
+          <img src="/images/education-icon.png" alt="Education Icon" class="image">
         </div>
         <div class="col-md-6 order-md-1">
-          <h3 class="industry-title mt-4 mt-md-0"><i class="fa-solid fa-user-graduate"></i>ESP Education</h3>
+          <h3 class="title mt-4 mt-md-0"><i class="fa-solid fa-user-graduate"></i>ESP Education</h3>
           <hr>
-          <h4>Learning Solutions</h4>
+          
           <p><em><strong>We empower educators and students to innovate & collaborate, fostering growth-oriented
                 learning in the journey towards academic excellence.</strong></em></p>
           <p>Beneficiaries are students, faculty & academic leaders in schools, polytechnics, colleges & universities.
@@ -281,17 +301,18 @@
       </div>
     </div>
   </div>
+  <hr class="bg-accent">
   <!-- Government Organizations -->
-  <div class="government-section px-4 px-md-0 py-custom">
+  <div class="px-4 px-md-0 py-5">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-6 order-first">
-          <img src="/images/government-org.png" alt="Government Icon" class="industry-icon">
+          <img src="/images/government-org.png" alt="Government Icon" class="image">
         </div>
         <div class="col-md-6 order-md-2">
-          <h3 class="industry-title mt-4 mt-md-0"><i class="fa-solid fa-landmark"></i>ESP Government</h3>
+          <h3 class="title mt-4 mt-md-0"><i class="fa-solid fa-landmark"></i>ESP Government</h3>
           <hr>
-          <h4>Learning Solutions</h4>
+          
           <p><em>
               <strong>We align & train Government teams to work towards efficient, transparent good governance for
                 impactful public service in the process of nation building.</strong>
