--- a/themes/growth-sketch/layouts/partials/menu.html
+++ b/themes/growth-sketch/layouts/partials/menu.html
@@ -10,8 +10,8 @@ Renders a menu for the given menu ID.
 {{- $page := .page }}
 {{- $menuID := .menuID }}
 
-<nav class="navbar navbar-expand-md navbar-light fixed-top p-0">
-  <div class="container">
+<nav class="navbar navbar-expand-lg navbar-light fixed-top p-0">
+  <div class="container px-md-0">
     <a class="navbar-brand d-flex align-items-center gap-2 gap-md-3 p-0 text-decoration-none" href="/">
       <img class="d-block" src="/images/logo.png" alt="ESPeople logo" title="ESPeople logo">
       <div class="brand-name">
@@ -25,8 +25,8 @@ Renders a menu for the given menu ID.
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse px-4" id="navbarNav">
-      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+    <div class="collapse navbar-collapse px-4 px-lg-0" id="navbarNav">
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0 gap-3">
         {{- with index site.Menus $menuID }}
         {{- partial "inline/menu/walk.html" (dict "page" $page "menuEntries" .) }}
         {{- end }}
