--- a/themes/growth-sketch/assets/scss/abstracts/_variables.scss
+++ b/themes/growth-sketch/assets/scss/abstracts/_variables.scss
@@ -22,6 +22,7 @@ $primary-clr: hsl(210, 100%, 25%);
 $secondary-clr: #0a1b24;
 $secondary-clr: hsl(200, 57%, 9%);
 $accent-clr: hsl(45, 100%, 51%);
+$accent-clr--dark: hsl(45, 100%, 31%);
 
 
 $primary-clr--light: hsla(194, 86%, 86%, 1);
