--- a/themes/growth-sketch/layouts/_default/home.html
+++ b/themes/growth-sketch/layouts/_default/home.html
@@ -355,13 +355,13 @@
   </div>
 </section>
 <!-- sec 4 - evolution -->
-<section class="evolution-vision-mission px-4 px-md-0 gradient-bg">
+<section class="evolution-section px-4 px-md-0">
   <div class="container">
     <div class="row">
-      <!-- Evolution Section -->
-      <div class="evolution-section col-md-5 me-auto" data-aos="fade-right">
+      <!-- Evolution -->
+      <div class="evolution col-md-5 me-auto" data-aos="fade-right">
         <h1 class="display-5 mb-3">The Evolution of ESPeople</h1>
-        <p class="evolution">
+        <p class="mb-0">
           Every great organisation starts with a dream—a vision for achieving excellence. But to turn that vision into
           reality, you need the right people who have the energy and ability to make things happen. That's where
           ESPeople come in. We partner with organisations to develop and empower their teams, helping them turn their
@@ -374,7 +374,7 @@
         <div class="vertical-divider"></div>
       </div>
       <hr class="d-md-none">
-      <!-- Vision & Mission Section -->
+      <!-- Vision & Mission -->
       <div class="col-md-5 ms-auto vision-mission-section" data-aos="fade-left">
         <h1 class="display-5">ESP Vision & Mission</h1>
         <p class="vision">
@@ -394,14 +394,16 @@
   <!-- Wave Divider -->
   <div class="wave-divider"></div>
 </section>
-<section class="why-espeople py-custom">
+<section class="why-espeople py-custom px-4 px-md-0">
   <div class="container">
-    <h2 class="display-5 text-center mb-4 aos-init" data-aos="fade-down">Why ESPeople</h2>
+    <h2 class="display-5 text-center mb-4" data-aos="fade-down">Why ESPeople</h2>
     
     <!-- ESP Learning Model -->
-    <div class="row flex-column flex-md-row align-items-center gap-4 learning-model aos-init" data-aos="fade-right">
-      <img class="d-block col-md-4 order-last rounded shadow" src="/images/learning-model.png" alt="learning model">
-      <div class="content col-md-7">
+    <div class="row align-items-center gap-4 py-5" data-aos="fade-right">
+      <div class="col-md-4 order-md-2 order-first">
+        <img class="" src="/images/learning-model.png" alt="learning model">
+      </div>
+      <div class="col-md-7">
         <h3 class="section-heading">The ESP Learning Model</h3>
         <ul class="custom-list mt-3">
           <li><span>Awareness:</span> Learning begins with creating a sense of awareness.</li>
@@ -412,31 +414,37 @@
         </ul>
       </div>
     </div>
+    <hr class="bg-accent">
 
     <!-- Core Belief -->
-    <div class="row flex-column flex-md-row align-items-center gap-4 core-belief aos-init my-3 my-md-0" data-aos="fade-up">
-      <img class="d-block col-md-4 rounded shadow" src="/images/core-belief-1.jpeg" alt="our-core-belief img">
-      <div class="content col-md-7">
+    <div class="row align-items-center gap-4 core-belief  py-5" data-aos="fade-up">
+      <div class="col-md-4">
+        <img class="" src="/images/core-belief-1.jpeg" alt="our-core-belief img">
+      </div>
+      <div class="col-md-7">
         <h3 class="section-heading">Our Core Belief</h3>
-        <p class="highlight-text">
+        <p class="">
           <strong>Love people</strong> for who they are instead of judging them for what they are not. 
         </p>
         <p class="highlight-text text-accent">Essence is, accept people as they are!</p>
-        <h5 class="highlight-title">
+        <p class="">
           Bridge the gap in required knowledge, skills, and practices which are appropriate to their aspirational growth goals.
-        </h5>
+        </p>
       </div>
     </div>
+    <hr class="bg-accent">
 
     <!-- What We Deliver -->
-    <div class="row flex-column flex-md-row align-items-center gap-4 delivery aos-init" data-aos="fade-left">
-      <img class="d-block col-md-4 rounded shadow order-last" src="/images/energize-synergize.jpeg" alt="energize-synergize img">
-      <div class="content col-md-7">
+    <div class="row align-items-center gap-4 delivery py-5" data-aos="fade-left">
+      <div class="col-md-4 order-md-2 order-first">
+        <img class="" src="/images/energize-synergize.jpeg" alt="energize-synergize img">
+      </div>
+      <div class="col-md-7">
         <h3 class="section-heading">What We Deliver</h3>
         <p class="">
           We energize your team's capabilities and synergize them with core strengths for high performance. <br> 
         </p>
-        <strong class="quote">"Thus, we are ESPeople Trainingsmiths"</strong>
+        <p><strong class="quote">"Thus, we are ESPeople Trainingsmiths"</strong></p>
       </div>
     </div>
   </div>
