--- a/themes/growth-sketch/assets/scss/pages/_home.scss
+++ b/themes/growth-sketch/assets/scss/pages/_home.scss
@@ -7,15 +7,17 @@ $hero-height: calc(100vh - #{$navbar-height});
 
   .title {
     font-size: 2rem;
+
     @media(min-width:768px) {
       font-size: 2.5rem;
     }
   }
-  .subtitle{
+
+  .subtitle {
     font-size: 1.2rem;
   }
 
-  .tagline{
+  .tagline {
     font-size: 1.2rem;
   }
 
@@ -36,9 +38,9 @@ $hero-height: calc(100vh - #{$navbar-height});
 
       /* Preserve aspect ratio and cover the area */
       @media(max-width:768px) {
-          height: calc(#{$hero-height} /2.6);
-          border-radius: 0;
-        }
+        height: calc(#{$hero-height} /2.6);
+        border-radius: 0;
+      }
     }
 
   }
@@ -65,7 +67,7 @@ $hero-height: calc(100vh - #{$navbar-height});
     color: $text-light-clr;
     padding: min(0.3rem, 1rem);
     text-align: center;
-    width:  160px;
+    width: 160px;
     height: 160px;
     border-radius: 50%;
     display: flex;
@@ -78,8 +80,9 @@ $hero-height: calc(100vh - #{$navbar-height});
       transform: translateY(-10px);
       box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
     }
+
     @media(max-width:425px) {
-      width:  37vw;
+      width: 37vw;
       height: 37vw;
 
     }
@@ -95,6 +98,11 @@ $hero-height: calc(100vh - #{$navbar-height});
       // font-size: clamp(1rem, 4vw, 0.9rem);
       text-align: center;
       margin-top: 5px;
+      font-size: 0.9rem;
+      letter-spacing: normal;
+      @media(min-width:768px){
+        font-size: 1rem;
+      }
     }
   }
 
@@ -114,6 +122,7 @@ $hero-height: calc(100vh - #{$navbar-height});
     @media(max-width:768px) {
       // font-size: 1.5rem;
     }
+
     i {
       color: $accent-clr;
       margin-right: 1rem;
@@ -134,19 +143,14 @@ $hero-height: calc(100vh - #{$navbar-height});
     margin-inline: auto;
     display: block;
     border-radius: 10px;
+
     // margin-bottom: 2rem;
     @media(min-width:991px) {
       width: 80%;
     }
   }
 
-  hr.bg-accent{
-    height: 4px;
-    opacity: 1;
-    width: 80%;
-    margin-inline: auto;
-    border-radius: 50%;
-  }
+
   .btn-row {
     i {
       background-color: transparent;
@@ -155,7 +159,7 @@ $hero-height: calc(100vh - #{$navbar-height});
       // width: 1.4em;
       // height: 1.4em;
     }
-}
+  }
 
 
   .btn {
@@ -165,156 +169,11 @@ $hero-height: calc(100vh - #{$navbar-height});
   }
 }
 
-// .evolution-vision-mission {
-//   position: relative;
-//   // background-color: $secondary-clr; // Your base section background color
-//   padding: 9rem 0; // Padding for the section content
-//   // border-radius: 10px;
-
-//   // margin-inline: 5rem;
-//   // Pseudo-element to create the wave at the bottom
-//   &::after {
-//     content: "";
-//     position: absolute;
-//     bottom: 0;
-//     left: 0;
-//     right: 0;
-//     width: 100%;
-//     height: 200px; // Adjust the height as per your need
-//     background: url('/images/wave.svg') no-repeat bottom;
-//     background-size: cover;
-//     z-index: 1;
-//   }
 
 
-
-
-
-//   // learning model animation section
-//   .learning-model-container {
-//     display: flex;
-//     flex-direction: column;
-
-//     justify-content: space-around;
-//     align-items: center;
-//     padding: 2rem;
-//   }
-
-//   .stage {
-//     text-align: center;
-//     opacity: 0.5;
-//     transition: all 0.5s ease;
-//     cursor: pointer;
-//   }
-
-//   .stage img {
-//     // width: 80px;
-//     height: 70%;
-//     transition: transform 0.5s ease;
-//   }
-
-//   .stage p {
-//     font-weight: bold;
-//     color: #003f7d;
-//     /* Main blue color */
-//     margin-top: 0.5rem;
-//   }
-
-//   .awareness img {
-//     filter: grayscale(1);
-//   }
-
-//   .understanding img {
-//     filter: grayscale(1);
-//   }
-
-//   .learning img {
-//     filter: grayscale(1);
-//   }
-
-//   .realization img {
-//     filter: grayscale(1);
-//   }
-
-//   .habitualization img {
-//     filter: grayscale(1);
-//   }
-
-//   .stage.active img {
-//     filter: none;
-//     transform: scale(1.2);
-//   }
-
-//   .stage.active {
-//     opacity: 1;
-//   }
-
-
-//   // why choose us
-
-//   .why-choose-us {
-//     background-color: $white;
-
-//     .section-title {
-//       font-size: 2.5rem;
-//       margin-bottom: 3rem;
-//     }
-
-//     .neumorphic-card {
-//       padding: 1rem;
-//       transition: all 300ms ease;
-//       height: 100%;
-//       // background: linear-gradient(145deg, #ffffff, #e6e6e6);
-//       border-radius: 10px;
-//       background-color: $white;
-//       box-shadow: 20px 20px 60px $white,
-//         -20px -20px 60px #e5e5e5;
-
-//       img {
-//         height: 350px;
-//         // aspect-ratio: 1;
-//         // width: 350px;
-//         object-fit: contain;
-//       }
-
-//       h4 {
-//         font-size: 1.75rem;
-//         margin-bottom: 1rem;
-//       }
-
-//       p,
-//       ul {
-//         font-size: 1rem;
-//         // color: #333;
-//         text-align: left;
-//       }
-
-//       ul {
-//         padding-left: 1.5rem;
-
-//         li {
-//           margin-bottom: 0.5rem;
-//           line-height: 1.6;
-//         }
-//       }
-
-//       &:hover {
-//         transform: scale(1.05);
-//         background-color: $secondary-clr;
-//         color: $light-clr;
-//         box-shadow: 25px 25px 75px rgba(0, 0, 0, 0.15), -25px -25px 75px rgba(255, 255, 255, 0.5);
-//       }
-//     }
-
-
-//   }
-
-
-// } 
-
-.evolution-vision-mission {
+.evolution-section {
   position: relative;
-  background: linear-gradient(to bottom right, $secondary-clr, $primary-clr);
+  background: linear-gradient(to bottom right, $primary-clr--light, $light-clr);
   padding: 9rem 0;
 
   &::after {
@@ -337,7 +196,7 @@ $hero-height: calc(100vh - #{$navbar-height});
   .vertical-divider {
     height: 100%;
     width: 4px;
-    background: $accent-clr;
+    background: $accent-clr--dark;
     border-radius: 50px;
   }
 
@@ -347,7 +206,7 @@ $hero-height: calc(100vh - #{$navbar-height});
     gap: 10px;
 
     i {
-      color: $accent-clr;
+      color: $accent-clr--dark;
     }
   }
 }
@@ -357,18 +216,17 @@ $hero-height: calc(100vh - #{$navbar-height});
 
 .why-espeople {
   background: linear-gradient(to right, $secondary-clr, $primary-clr);
-animation: gradient-shift 5s infinite;
-color: $white;
-@keyframes gradient-shift {
-  0% { background-position: 0% 50%; }
-  100% { background-position: 100% 50%; }
-}
+  animation: gradient-shift 5s infinite;
+  color: $white;
 
-  h2 {
-    // color: $primary-clr;
-    // font-size: 2.5rem;
-    // font-weight: bold;
-    margin-bottom: 2rem;
+  @keyframes gradient-shift {
+    0% {
+      background-position: 0% 50%;
+    }
+
+    100% {
+      background-position: 100% 50%;
+    }
   }
 
   .section-heading {
@@ -387,12 +245,12 @@ color: $white;
     li {
       margin-bottom: 1rem;
       // font-size: 1rem;
-      line-height: 1.8;
+      // line-height: 1.8;
 
       span {
         font-weight: bold;
         color: $accent-clr;
-        font-size: 1.2rem;
+        // font-size: 1.2rem;
       }
     }
   }
@@ -401,7 +259,7 @@ color: $white;
     // color: $primary-clr;
     font-weight: bold;
     font-size: 1.2rem;
-    display: block;
+    // display: block;
     font-style: italic;
     // margin-top: 1rem;
   }
@@ -413,7 +271,7 @@ color: $white;
   }
 
   .quote {
-    font-size: 1.3rem;
+    // font-size: 1.3rem;
     // font-style: italic;
     color: $accent-clr;
     margin-top: 2rem;
@@ -423,6 +281,7 @@ color: $white;
   img {
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+
     &:hover {
       transform: scale(1.05);
       transition: all 0.3s ease;
@@ -434,3 +293,10 @@ color: $white;
 
 
 
+hr.bg-accent {
+  height: 4px;
+  opacity: 1;
+  width: 80%;
+  margin-inline: auto;
+  border-radius: 50%;
+}
