--- a/themes/growth-sketch/assets/scss/pages/_contact.scss
+++ b/themes/growth-sketch/assets/scss/pages/_contact.scss
@@ -1,15 +1,20 @@
+@import '../abstracts/variables';
 
 
 .contact-section {
     .contact-left-bg {
       background: $primary-clr url(/images/contact-us-bg.jpg) no-repeat center/cover;
-    //   background-blend-mode: overlay;
+      background-blend-mode: overlay;
       border-radius: 25px;
       border-top-right-radius: 0;
       border-bottom-right-radius: 0;
       background-color: hsl(201, 57%, 9%);
-      box-shadow: inset  20px 20px 60px #0a1b24,
-                  inset -20px -20px 60px #0a1b24;
+      // box-shadow: inset  20px 20px 60px #0a1b24,
+      //             inset -20px -20px 60px #0a1b24;
+      color: $white;
+      a{
+        color: $accent-clr;
+      }
                   
     }
   
