--- a/themes/growth-sketch/layouts/_default/home.html
+++ b/themes/growth-sketch/layouts/_default/home.html
@@ -5,7 +5,7 @@
     <div class="row align-items-center justify-content-between">
       <div class="col-md-7 content py-5 py-md-0">
         <h1 
-          class="title text-light display-6" 
+          class="title text-light display-6 fw-bold" 
           data-aos="fade-up" 
           data-aos-delay="0">Is your business or organization struggling to achieve its goals and energize your team?</h1>
       
@@ -388,7 +388,7 @@ That’s why we at ESPeople have developed solutions tailored to meet the needs 
   </div>
 </section>
 <!-- sec 4 - evolution -->
-<section class="evolution-section px-4 px-md-0">
+<section id="evm" class="evolution-section px-4 px-md-0">
   <div class="container">
     <div class="row">
       <!-- Evolution -->
@@ -400,7 +400,7 @@ That’s why we at ESPeople have developed solutions tailored to meet the needs 
           ESPeople come in. We partner with organisations to develop and empower their teams, helping them turn their
           original dream into reality and inspire new heights of success.
         </p>
-        <img src="/images/single-candle.png" alt="Single Candle Icon" class="icon-image">
+        <!-- <img src="/images/single-candle.png" alt="Single Candle Icon" class="icon-image"> -->
       </div>
       <!-- Vertical Divider -->
       <div class="col-md-2 mx-auto d-none d-md-block">
@@ -427,7 +427,7 @@ That’s why we at ESPeople have developed solutions tailored to meet the needs 
   <!-- Wave Divider -->
   <div class="wave-divider"></div>
 </section>
-<section class="why-espeople py-custom px-4 px-md-0">
+<section id="lcw" class="why-espeople py-custom px-4 px-md-0">
   <div class="container">
     <h2 class="display-5 text-center mb-4" data-aos="fade-down">Why ESPeople</h2>
     
@@ -477,7 +477,7 @@ That’s why we at ESPeople have developed solutions tailored to meet the needs 
         <p class="">
           We energize your team's capabilities and synergize them with core strengths for high performance. <br> 
         </p>
-        <p class="fw-bold">"Thus, we are ESPeople Trainingsmiths"</p>
+        <p class="fw-bold tagline">"Thus, we are ESPeople Trainingsmiths"</p>
       </div>
     </div>
   </div>
