--- a/themes/growth-sketch/layouts/partials/footer.html
+++ b/themes/growth-sketch/layouts/partials/footer.html
@@ -4,6 +4,10 @@
             <img src="/images/logo.png" alt="ESPeople Logo" class="logo-img">
         </div>
         <ul class="nav justify-content-center">
+            <!-- home -->
+             <li class="nav-item">
+                <a class="nav-link" href="/">Home</a>
+             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/about/about-espeople">About ESPeople</a>
             </li>
@@ -19,6 +23,10 @@
             <li class="nav-item">
                 <a class="nav-link" href="/kadigai">ESP Kadigai</a>
             </li>
+            <!-- contact us -->
+             <li class="nav-item">
+                <a class="nav-link" href="/contact-us">Contact Us</a>
+             </li>
         </ul>
 
         <div class="social-icons mt-3">
