--- a/themes/growth-sketch/layouts/_default/home.html
+++ b/themes/growth-sketch/layouts/_default/home.html
@@ -1,5 +1,8 @@
 {{ define "main" }}
 <!-- Section 1- Hero -->
+ <!-- <section class="vh-100 d-flex align-items-center justify-content-center">
+  <h1 class="text-center tagline display-1">TrainingSmiths</h1>
+ </section> -->
 <section class="hero gradient-bg d-flex align-items-md-center">
   <div class="container text-center text-md-start">
     <div class="row align-items-center justify-content-between">
@@ -26,7 +29,7 @@
       </div>
       
       <div class="col-md-5 px-0 px-md-2 order-first order-md-2">
-        <div id="heroCarousel" class="carousel slide" data-bs-ride="false" data-bs-interval="1500">
+        <div id="heroCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="1300">
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img src="/images/hero-img-3-B.jpg" class="d-block w-100 carousel-image"
@@ -183,7 +186,7 @@ That’s why we at ESPeople have developed solutions tailored to meet the needs 
           </p>
           <section class="row align-items-center mt-4 justify-content-between justify-content-md-start gap-3 btn-row">  
             <div class="col-12 col-md-auto">  
-              <a href="/esp-business" class="btn btn-primary">Know more</a>  
+              <a href="/clientele-beneficiaries/esp-business" class="btn btn-primary">Know more</a>  
             </div>  
             <!-- PDF Icon with Dropdown for Brochure -->  
             <div class="col-auto dropdown mt-2 mt-md-0">  
@@ -246,7 +249,7 @@ That’s why we at ESPeople have developed solutions tailored to meet the needs 
           <!-- </p> -->
           <section class="row align-items-center mt-4 justify-content-between justify-content-md-start gap-3 btn-row">  
             <div class="col-12 col-md-auto">  
-              <a href="/esp-non-profit" class="btn btn-primary">Know more</a>  
+              <a href="/clientele-beneficiaries/esp-non-profit" class="btn btn-primary">Know more</a>  
             </div>  
             <!-- PDF Icon with Dropdown for Brochure -->  
             <div class="col-auto dropdown mt-2 mt-md-0">  
@@ -300,7 +303,7 @@ That’s why we at ESPeople have developed solutions tailored to meet the needs 
           </p>
           <section class="row align-items-center mt-4 justify-content-between justify-content-md-start gap-3 btn-row">  
             <div class="col-12 col-md-auto">  
-              <a href="/esp-education" class="btn btn-primary">Know more</a>  
+              <a href="/clientele-beneficiaries/esp-education" class="btn btn-primary">Know more</a>  
             </div>  
             <!-- PDF Icon with Dropdown for Brochure -->  
             <div class="col-auto dropdown mt-2 mt-md-0">  
@@ -356,7 +359,7 @@ That’s why we at ESPeople have developed solutions tailored to meet the needs 
                 development Roadmap</p>
           <section
             class="row align-items-center mt-4 justify-content-between justify-content-md-start gap-3 btn-row">
-            <div class="col-12 col-md-auto"><a href="/esp-government" class="btn btn-primary">Know more</a></div>
+            <div class="col-12 col-md-auto"><a href="/clientele-beneficiaries/esp-government" class="btn btn-primary">Know more</a></div>
             <!-- PDF Icon with Dropdown for Brochure -->
             <div class="col-auto dropdown ">
               <a class="btn btn-primary--outline d-flex align-items-center " href="#" role="button"
