--- a/themes/growth-sketch/layouts/partials/menu.html
+++ b/themes/growth-sketch/layouts/partials/menu.html
@@ -12,12 +12,12 @@ Renders a menu for the given menu ID.
 
 <nav class="navbar navbar-expand-lg navbar-light fixed-top p-0">
   <div class="container px-md-0">
-    <a class="navbar-brand d-flex align-items-center gap-2 gap-md-3 p-0 text-decoration-none" href="/">
-      <img class="d-block" src="/images/logo.png" alt="ESPeople logo" title="ESPeople logo">
-      <div class="brand-name">
+    <a class="navbar-brand" href="/">
+      <img class="" src="/images/ESPeople-logo.png" alt="ESPeople logo" title="ESPeople logo">
+      <!-- <div class="brand-name">
         <h2 class="brand mb-0">ESPeople</h2>
         <p class="tagline mb-0">TrainingSmiths</p>
-      </div>
+      </div> -->
     </a>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
