--- a/themes/growth-sketch/layouts/_default/home.html
+++ b/themes/growth-sketch/layouts/_default/home.html
@@ -196,13 +196,13 @@ That’s why we at ESPeople have developed solutions tailored to meet the needs 
               </a>  
               <ul class="dropdown-menu" aria-labelledby="brochureDropdown">  
                 <li class="d-none d-md-block">  
-                  <a class="dropdown-item d-flex align-items-center gap-1" href="/PDF/ESP-brochure.pdf" target="_blank"  
+                  <a class="dropdown-item d-flex align-items-center gap-1" href="/PDF/ESP-Brochure-Business.pdf" target="_blank"  
                     rel="noopener noreferrer">  
                     <i class="fa-regular fa-eye me-1"></i>View Brochure  
                   </a>  
                 </li>  
                 <li>  
-                  <a class="dropdown-item d-flex align-items-center gap-1" href="/PDF/ESP-brochure.pdf" download>  
+                  <a class="dropdown-item d-flex align-items-center gap-1" href="/PDF/ESP-Brochure-Business.pdf" download>  
                     <i class="fa-solid fa-download me-1"></i>Download Brochure  
                   </a>  
                 </li>  
@@ -259,13 +259,13 @@ That’s why we at ESPeople have developed solutions tailored to meet the needs 
               </a>  
               <ul class="dropdown-menu" aria-labelledby="brochureDropdown">  
                 <li class="d-none d-md-block">  
-                  <a class="dropdown-item d-flex align-items-center gap-1" href="/PDF/ESP-brochure.pdf" target="_blank"  
+                  <a class="dropdown-item d-flex align-items-center gap-1" href="/PDF/ESP-Brochure-Non_Profit.pdf" target="_blank"  
                     rel="noopener noreferrer">  
                     <i class="fa-regular fa-eye me-1"></i>View Brochure  
                   </a>  
                 </li>  
                 <li>  
-                  <a class="dropdown-item d-flex align-items-center gap-1" href="/PDF/ESP-brochure.pdf" download>  
+                  <a class="dropdown-item d-flex align-items-center gap-1" href="/PDF/ESP-Brochure-Non_Profit.pdf" download>  
                     <i class="fa-solid fa-download me-1"></i>Download Brochure  
                   </a>  
                 </li>  
@@ -313,13 +313,13 @@ That’s why we at ESPeople have developed solutions tailored to meet the needs 
               </a>  
               <ul class="dropdown-menu" aria-labelledby="brochureDropdown">  
                 <li class="d-none d-md-block">  
-                  <a class="dropdown-item d-flex align-items-center gap-1" href="/PDF/ESP-brochure.pdf" target="_blank"  
+                  <a class="dropdown-item d-flex align-items-center gap-1" href="/PDF/ESP-Brochure-Education.pdf" target="_blank"  
                     rel="noopener noreferrer">  
                     <i class="fa-regular fa-eye me-1"></i>View Brochure  
                   </a>  
                 </li>  
                 <li>  
-                  <a class="dropdown-item d-flex align-items-center gap-1" href="/PDF/ESP-brochure.pdf" download>  
+                  <a class="dropdown-item d-flex align-items-center gap-1" href="/PDF/ESP-Brochure-Education.pdf" download>  
                     <i class="fa-solid fa-download me-1"></i>Download Brochure  
                   </a>  
                 </li>  
