insta and twitter and brochures

--- a/themes/growth-sketch/layouts/_default/home.html
+++ b/themes/growth-sketch/layouts/_default/home.html
@@ -209,11 +209,11 @@ That’s why we at ESPeople have developed solutions tailored to meet the needs 
               </ul>  
             </div>  
             <!-- YouTube Icon with Link to Open Modal -->  
-            <div class="col-auto">  
+            <!-- <div class="col-auto">  
               <a href="#videoModal" data-bs-toggle="modal" class="btn btn-primary--outline d-flex w-auto align-items-center justify-content-between">  
                 <i class="fa-brands fa-youtube me-2"></i>Watch Video  
               </a>  
-            </div>  
+            </div>   -->
           </section>
         </div>
         <div class="col-md-6 order-first">
@@ -272,11 +272,11 @@ That’s why we at ESPeople have developed solutions tailored to meet the needs 
               </ul>  
             </div>  
             <!-- YouTube Icon with Link to Open Modal -->  
-            <div class="col-auto">  
+            <!-- <div class="col-auto">  
               <a href="#videoModal" data-bs-toggle="modal" class="btn btn-primary--outline d-flex w-auto align-items-center justify-content-between">  
                 <i class="fa-brands fa-youtube me-2"></i>Watch Video  
               </a>  
-            </div>  
+            </div>   -->
           </section>
         </div>
       </div>
@@ -326,11 +326,11 @@ That’s why we at ESPeople have developed solutions tailored to meet the needs 
               </ul>  
             </div>  
             <!-- YouTube Icon with Link to Open Modal -->  
-            <div class="col-auto">  
+            <!-- <div class="col-auto">  
               <a href="#videoModal" data-bs-toggle="modal" class="btn btn-primary--outline d-flex w-auto align-items-center justify-content-between">  
                 <i class="fa-brands fa-youtube me-2"></i>Watch Video  
               </a>  
-            </div>  
+            </div>   -->
           </section>
         </div>
       </div>
@@ -368,22 +368,22 @@ That’s why we at ESPeople have developed solutions tailored to meet the needs 
               </a>
               <ul class="dropdown-menu" aria-labelledby="brochureDropdown">
                 <li class="d-none d-md-block">
-                  <a class="dropdown-item d-flex align-items-center gap-1" href="/PDF/ESP-brochure.pdf" target="_blank"
+                  <a class="dropdown-item d-flex align-items-center gap-1" href="/PDF/ESP-Brochure-Government.pdf" target="_blank"
                     rel="noopener noreferrer">
                     <i class="fa-regular fa-eye me-1"></i>View Brochure
                   </a>
                 </li>
-                <li><a class="dropdown-item d-flex align-items-center gap-1" href="/PDF/ESP-brochure.pdf" download><i
+                <li><a class="dropdown-item d-flex align-items-center gap-1" href="/PDF/ESP-Brochure-Government.pdf" download><i
                       class="fa-solid fa-download me-1"></i>Download Brochure</a></li>
               </ul>
             </div>
             <!-- YouTube Icon with Link to Open Modal -->
-            <div class="col-auto">
+            <!-- <div class="col-auto">
               <a href="#videoModal" data-bs-toggle="modal"
                 class="btn btn-primary--outline  d-flex w-auto align-items-center justify-content-between">
                 <i class="fa-brands fa-youtube me-2"></i>Watch Video
               </a>
-            </div>
+            </div> -->
           </section>
         </div>
       </div>
