--- a/themes/growth-sketch/layouts/partials/footer.html
+++ b/themes/growth-sketch/layouts/partials/footer.html
@@ -30,13 +30,13 @@
         </ul>
 
         <div class="social-icons mt-3">
-            <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
-            <a href="#" class="social-link"><i class="fab fa-facebook"></i></a>
-            <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
+            <a href="https://x.com/EspSmiths" target="_blank" rel="noopenner" class="social-link"><i class="fab fa-x-twitter"></i></a>
+            <!-- <a href="#" class="social-link"><i class="fab fa-facebook"></i></a> -->
+            <a href="https://www.instagram.com/esptrainingsmiths/" target="_blank" rel="noopenner" class="social-link"><i class="fab fa-instagram"></i></a>
             <!-- youtube -->
-            <a href="#" class="social-link"><i class="fab fa-youtube"></i></a>
+            <!-- <a href="#" class="social-link"><i class="fab fa-youtube"></i></a> -->
             <!-- linkedin -->
-            <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
+            <!-- <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a> -->
         </div>
 
         <p class="footer-copyright">
